--- a/Homework-08/package.json
+++ b/Homework-08/package.json
@@ -10,14 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@fortawesome/free-solid-svg-icons": "^6.7.2",
-    "@fortawesome/react-fontawesome": "^0.2.2",
-    "aos": "^3.0.0-beta.6",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-icons": "^5.4.0",
-    "react-router": "^7.1.1",
-    "react-router-dom": "^7.1.1"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
